[aliases]
release = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit-addons
url = https://chaostoolkit.org
project_urls =
    CI: GitHub = https://github.com/chaostoolkit/chaostoolkit-addons/actions
    Docs: RTD = https://docs.chaostoolkit.org
    GitHub: issues = https://github.com/chaostoolkit/chaostoolkit-addons/issues
    GitHub: repo = https://github.com/chaostoolkit/chaostoolkit-addons
description = Addons for your Chaos Toolkit experiments
long_description = file: README.md
long_description_content_type = text/markdown
author = Chaos Toolkit
author_email = contact@chaostoolkit.org
license_file = LICENSE
zip_safe = False
platforms = any
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0

[pylama]
format = pylint

[pylama:pycodestyle]
max_line_length = 80

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaosaddons
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings
